# taurisharp

./: .editorconfig  .gitignore  README.md  TauriSharp.sln  bun.lockb  index.html  package.json  shell.nix  vite.config.js
npins/: sources.json
src/: App.fs  App.fsi  App.fsproj  Main.fs  Utils.fs
src-tauri/: AppRs.fsproj  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.fs  commands.rs  lib.rs  main.rs
